首頁細節調整

--- a/No3.admin_order/index.html
+++ b/No3.admin_order/index.html
@@ -39,46 +39,48 @@
   <div id="wrap">
 
     <div id="header">
-      <nav class="navbar navbar-expand-sm">
-        <!-- logo -->
-        <a class="navbar-brand" href="#">SHOPTIME</a>
+      <div class="col-12 col-sm-11 pd-0 mg-0">
+        <nav class="navbar navbar-expand-sm">
+          <!-- logo -->
+          <a class="navbar-brand" href="#">SHOPTIME</a>
 
-        <!-- links -->
+          <!-- links -->
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-          aria-label="Toggle navigation">
-          <i class="fas fa-bars"></i>
-        </button>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <i class="fas fa-bars"></i>
+          </button>
 
-        <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
-          <ul class="navbar-nav menu">
-            <li class="nav-item">
-              <a href="#" class="nav-link active">HOME</a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link">ORDERS</a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link">PRODUCT</a>
-            </li>
-          </ul>
+          <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
+            <ul class="navbar-nav menu">
+              <li class="nav-item">
+                <a href="#" class="nav-link active">HOME</a>
+              </li>
+              <li class="nav-item">
+                <a href="#" class="nav-link">ORDERS</a>
+              </li>
+              <li class="nav-item">
+                <a href="#" class="nav-link">PRODUCT</a>
+              </li>
+            </ul>
 
-          <ul class="navbar-nav user">
-            <li class="nav-item">
-              <a href="#" class="nav-link">
-                <i class="fas fa-user-circle"></i>
-              </a>
-            </li>
-          </ul>
+            <ul class="navbar-nav user">
+              <li class="nav-item">
+                <a href="#" class="nav-link">
+                  <i class="fas fa-user-circle"></i>
+                </a>
+              </li>
+            </ul>
 
-        </div>
-      </nav>
+          </div>
+        </nav>
+      </div>
     </div>
 
     <div id="main" class="container">
-      <div class="row justify-content-center mg-20-0 pd-0 mg-15">
+      <div class="row justify-content-center mg-20-0 pd-0">
         <div class="col-12 col-sm-11 pd-0">
-          <div class="row title">
+          <div class="row title  align-items-center">
             <div class="col-11 col-sm-auto pd-0">
               <h1>OVERVIEW</h1>
             </div>
@@ -118,23 +120,22 @@
       <div class="row justify-content-center pd-0">
         <div class="col-12 col-sm-4 col-md-4">
           <div class="total info">
-            <h3>
-              <i class="fas fa-hand-holding-usd"></i>TOTAL REVENUE</h3>
+            <i class="fas fa-hand-holding-usd fa-2x"></i>
+            <h3>TOTAL REVENUE</h3>
             <span class="total-t t-green">54,540</span>
           </div>
         </div>
         <div class="col-12 col-sm-4 col-md-4">
           <div class="total info">
-            <h3>
-              <i class="fas fa-dollar-sign"></i>
-              </i>TOTAL COST</h3>
+            <i class="fas fa-dollar-sign fa-2x"></i>
+            <h3>TOTAL COST</h3>
             <span class="total-t t-red">12,660</span>
           </div>
         </div>
         <div class="col-12 col-sm-4 col-md-4">
           <div class="total info">
-            <h3>
-              <i class="fas fa-money-bill"></i>NET INCOME</h3>
+            <i class="fas fa-money-bill fa-2x"></i>
+            <h3>NET INCOME</h3>
             <span class="total-t t-blue">41,880</span>
           </div>
         </div>
@@ -243,7 +244,7 @@
                   <p>
                     <span>
                       <i class="fas fa-male"></i>
-                    </span>EG PAN</p>
+                    </span>EG Pan</p>
                 </div>
                 <div class="o-total">
                   <span>Total</span>
