--- a/No3.admin_order/product.html
+++ b/No3.admin_order/product.html
@@ -53,13 +53,13 @@
         <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
           <ul class="navbar-nav menu">
             <li class="nav-item">
-              <a href="#" class="nav-link active">HOME</a>
+              <a href="index.html" class="nav-link">HOME</a>
             </li>
             <li class="nav-item">
               <a href="orders.html" class="nav-link">ORDERS</a>
             </li>
             <li class="nav-item">
-              <a href="product.html" class="nav-link">PRODUCT</a>
+              <a href="#" class="nav-link active">PRODUCT</a>
             </li>
           </ul>
 
