--- a/No4.product_gallery/index.html
+++ b/No4.product_gallery/index.html
@@ -33,32 +33,38 @@
       <div class="bg1"></div>
       <div class="item1">
         <div class="item-img f-l">
-          <img src="img/coffee01.png" alt="">
+          <img src="img/coffee01.png" alt="Lattee">
           <div class="frame"></div>
           <div class="box"></div>
+          <div class="striped"></div>
         </div>
         <div class="item-info f-r">
           <h2>Lattee</h2>
-          <p>Labore voluptate in ullamco laboris quis pariatur occaecat. Mollit id sunt aute aliquip excepteur. Reprehenderit nostrud fugiat anim elit occaecat.</p>
+          <p>Labore voluptate in ullamco laboris quis pariatur occaecat. Mollit id sunt aute aliquip excepteur. Reprehenderit
+            nostrud fugiat anim elit occaecat.</p>
+          <a href="product.html">more</a>
         </div>
       </div>
 
       <div class="bg2"></div>
       <div class="item2">
-        <div class="item-img f-r">
-          <img src="img/coffee01.png" alt="">
+        <div class="item-img">
+          <img src="img/coffee01.png" alt="Mocka">
           <div class="frame"></div>
           <div class="box"></div>
+          <div class="striped"></div>
         </div>
-        <div class="item-info f-l">
+        <div class="item-info">
           <h2>Mocka</h2>
-          <p>Non sit ipsum dolore amet enim eiusmod cupidatat incididunt ex. Quis commodo irure voluptate eu aliquip aliquip minim labore velit ex exercitation sunt enim. Exercitation labore occaecat nulla esse velit cupidatat culpa. Culpa quis consectetur ipsum dolor labore.</p>
+          <p>Excepteur Lorem voluptate sint quis aliquip mollit amet sunt voluptate dolore anim irure. Duis sit voluptate occaecat
+            ad. Cillum sunt consequat consectetur deserunt ea veniam voluptate eu.</p>
+          <a href="product.html">more</a>
         </div>
       </div>
 
       <div class="bg3">
-        <h3>Coffee is life,<br/>
-          bitter and sweet are included.</h3>
+        <h3>Coffee is life,
+          <br/> bitter and sweet are included.</h3>
       </div>
   </div>
 
