--- a/No4.product_gallery/mocka.html
+++ b/No4.product_gallery/mocka.html
@@ -25,54 +25,38 @@
 <body>
   <div id="wrap">
 
-    <header class="header">
-      <img src="img/header.png" alt="coffee tea or eg">
-    </header>
-
     <main class="content">
-      <div class="bg1"></div>
-      <div class="item1">
+
+      <div class="product-info">
         <div class="item-img f-l">
-          <img src="img/coffee01.png" alt="Lattee">
+          <img src="img/mocka.png" alt="Lattee">
           <div class="frame"></div>
           <div class="box"></div>
           <div class="striped"></div>
         </div>
         <div class="item-info f-r">
-          <h2>Lattee</h2>
-          <p>Labore voluptate in ullamco laboris quis pariatur occaecat. Mollit id sunt aute aliquip excepteur. Reprehenderit
-            nostrud fugiat anim elit occaecat.</p>
-          <a href="product.html">more</a>
-        </div>
-      </div>
-
-      <div class="bg2"></div>
-      <div class="item2">
-        <div class="item-img">
-          <img src="img/coffee01.png" alt="Mocka">
-          <div class="frame"></div>
-          <div class="box"></div>
-          <div class="striped"></div>
-        </div>
-        <div class="item-info">
           <h2>Mocka</h2>
-          <p>Excepteur Lorem voluptate sint quis aliquip mollit amet sunt voluptate dolore anim irure. Duis sit voluptate occaecat
-            ad. Cillum sunt consequat consectetur deserunt ea veniam voluptate eu.</p>
-          <a href="product.html">more</a>
+          <p>Amet esse elit voluptate aliqua voluptate pariatur culpa excepteur exercitation laborum nulla labore. Enim excepteur
+            anim culpa laboris veniam. Fugiat id dolore id est enim ut minim veniam aliqua ad nulla. Aliquip veniam velit
+            nostrud non. Sit do aliquip nisi do veniam ullamco laboris minim. Quis tempor dolor esse adipisicing officia
+            dolore elit eu Lorem nisi velit magna. Non quis sit in pariatur exercitation deserunt fugiat anim consectetur
+            reprehenderit proident consectetur. Officia deserunt eiusmod labore laborum culpa sit fugiat ut qui duis aliquip
+            deserunt. Cupidatat eiusmod irure irure aute duis laborum eiusmod in dolor officia ea ex. Anim sunt in eu veniam
+            cillum ut. Labore aliquip veniam nisi enim enim dolore aliquip labore dolore. Ipsum Lorem fugiat nostrud elit
+            magna enim. Est ipsum amet ut nisi.</p>
+        </div>
+        <div class="back">
+          <a href="index.html">back</a>
         </div>
       </div>
 
-      <div class="bg3">
-        <h3>Coffee is life,
-          <br/> bitter and sweet are included.</h3>
-      </div>
   </div>
 
   </main>
 
 
 
-  <footer class="footer">
+  <!-- <footer class="footer">
     <div id="copyright">
       <div class="copyright_line">
         <p>[The F2E - No4.Product Gallery] Designed by Pantomimeg.</p>
@@ -82,7 +66,7 @@
         <p>Designed by Pantomimeg.</p>
       </div>
     </div>
-  </footer>
+  </footer> -->
 
 
   </div>
