--- a/No4.product_gallery/index.html
+++ b/No4.product_gallery/index.html
@@ -14,7 +14,7 @@
 
 
   <!-- fontawesome -->
-  <link href="https://fonts.googleapis.com/css?family=Just+Me+Again+Down+Here|Walter+Turncoat" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Walter+Turncoat" rel="stylesheet">
 
   <!-- font -->
 
