--- a/No6./index.html
+++ b/No6./index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>EG's TheF2E - No2.filter</title>
+  <title>EG's TheF2E - No6.</title>
   <link rel="shortcut icon" type="image/x-icon" href="egg.ico">
   <link rel="stylesheet" href="css/reset.css">
 
