--- a/No6.validation/index.html
+++ b/No6.validation/index.html
@@ -49,7 +49,7 @@
         <div class="form-row justify-content-center">
           <div class="col-11 info-item">
             <label for="validationCustom01">Account</label>
-            <input type="text" class="form-control" id="validationCustom01" placeholder="example@email.com" value="Mark" required>
+            <input type="text" class="form-control" id="validationCustom01" placeholder="example@email.com" required>
             <!-- <div class="valid-feedback">
               Good!
             </div> -->
