--- a/No7.Canvas_Game/index.html
+++ b/No7.Canvas_Game/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
 
+  <link href="https://fonts.googleapis.com/css?family=Yantramanav:500" rel="stylesheet">
 </head>
 
 <body>
