--- a/No8.parallax_scrolling/index.html
+++ b/No8.parallax_scrolling/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>EG's TheF2E - No8.</title>
+  <title>EG's TheF2E - No8.Parallax Scrolling</title>
   <link rel="shortcut icon" type="image/x-icon" href="egg.ico">
   <link rel="stylesheet" href="css/reset.css">
 
@@ -25,6 +25,7 @@
   <link rel="stylesheet" href="css/fontawesome-all.css">
 
   <!-- font -->
+  <link href="https://fonts.googleapis.com/css?family=Abel|Rubik:400,500" rel="stylesheet">
 
   <link rel="stylesheet" href="css/style.css">
 
@@ -33,22 +34,40 @@
 <body>
   <div id="wrap">
 
-    <div id="header"></div>
-
-    <div id="main"></div>
-
-    <div id="footer">
-      <div id="copyright">
-        <div class="copyright_line">
-          <p>[The F2E - No.] Designed by Pantomimeg.</p>
+    <main id="main">
+      <div class="q-all">
+        <div class="q-info">
+          <h2 class="lake">Q1</h2>
+          <p class="q-main white">If one day you get a gift that can change the rule of the world, which ability will you choose?</p>
+          <p class="q-ps orange">Choose the answer appeared in your mind instantly</p>
+          <div class="q-op">
+            <a href="#">Destroy all humans in the world</a>
+            <a href="#">Make the war never happened</a>
+            <a href="#">You won’t get old and live forever</a>
+          </div>
         </div>
-        <div class="copyright_lines">
-          <p>[The F2E - No.]</p>
-          <p>Designed by Pantomimeg.</p>
-        </div>
+
       </div>
 
-    </div>
+      <div class="shape">
+        <div class="square"></div>
+        <div class="triangle"></div>
+        <div class="circle"></div>
+      </div>
+    </main>
+
+    <!-- <footer id="footer">
+      <div id="copyright">
+        <div class="copyright_line">
+          <p>[The F2E - No8.Parallax Scrolling] Designed by Pantomimeg.</p>
+        </div>
+        <div class="copyright_lines">
+          <p>[The F2E - No8.Parallax Scrolling]</p>
+          <p>Designed by Pantomimeg.</p>
+        </div>
+    </footer> -->
+
+  </div>
 
   </div>
 
