--- a/No9.skill_tree/index.html
+++ b/No9.skill_tree/index.html
@@ -341,7 +341,7 @@
       <div class="info">
         <div class="skill-name">
           <i class="material-icons">flip_to_front</i>
-          <h3>CSS FRAMEWORK</h3>
+          <h3>CSS</br>FRAMEWORK</h3>
         </div>
         <div class="skill-info">
           <i class="material-icons">settings</i>
