--- a/No5.comic_viewer/index.html
+++ b/No5.comic_viewer/index.html
@@ -9,6 +9,18 @@
   <link rel="shortcut icon" type="image/x-icon" href="egg.ico">
   <link rel="stylesheet" href="css/reset.css">
 
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="js/bootstrap.js"></script>
+
+  <!-- Bootstrap CSS -->
+  <link href="css/bootstrap.css" rel="stylesheet">
+
   <!-- fontawesome -->
   <script src="js/fontawesome-all.js"></script>
   <link rel="stylesheet" href="css/fontawesome-all.css">
